--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,18 @@
   flex-direction: column;
 }
 
+.justify-right {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .align-center {
   align-items: center;
 }
