--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ button:hover {
   cursor: pointer;
 }
 
+header {
+  position: sticky;
+  top: 0;
+}
+
 .bg-light-gray {
   background-color: rgb(239, 239, 239);
 }
@@ -36,7 +41,6 @@ button:hover {
   height: 5rem;
   background-color: rgb(99, 187, 255);
   justify-content: space-between;
-  position: sticky;
 }
 
 .logo-wrapper {
