--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@ header {
   background-color: rgb(239, 239, 239);
 }
 
+.horz-padding {
+  padding: 0 1rem;
+}
+
 .icon-button {
   background-color: transparent;
   border: none;
@@ -60,6 +64,10 @@ header {
 .all-sets {
   color: rgb(142, 142, 142);
   font-size: 1.5rem;
+}
+
+.change-title {
+  font-size: 1rem;
 }
 
 .menu {
@@ -108,4 +116,17 @@ header {
 
 .no-sets {
   padding: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(239, 239, 239);
+  box-shadow: 0 4px 5px 0 rgb(142, 142, 142);
+  width: 10rem;
+}
+
+.card-image {
+  width: 90%;
 }
