--- a/css/styles.css
+++ b/css/styles.css
@@ -121,10 +121,12 @@ header {
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background-color: rgb(239, 239, 239);
   box-shadow: 0 4px 5px 0 rgb(142, 142, 142);
   width: 10rem;
+  height: 14rem;
 }
 
 .card-image {
