--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,11 @@ header {
   padding: 0.5rem;
 }
 
+.dropdown {
+  height: 1.5rem;
+  width: 10rem;
+}
+
 /* pokeball card */
 
 .card.pokeball {
